Optimization runs completed

--- a/nile_EMODPS_framework/experimentation/Artificial streamflow generation.ipynb
+++ b/nile_EMODPS_framework/experimentation/Artificial streamflow generation.ipynb
@@ -304,7 +304,13 @@
     "catchments_2 = [\"Rahad\", \"Dinder\"]\n",
     "\n",
     "for realization in range(30):\n",
-    "    multi_site_nile_generator([catchments_1, catchments_2], 20, [realization, 100+realization], realization, \"baseline\")"
+    "    multi_site_nile_generator(\n",
+    "        [catchments_1, catchments_2],\n",
+    "        20,\n",
+    "        [realization, 100 + realization],\n",
+    "        realization,\n",
+    "        \"baseline\",\n",
+    "    )"
    ]
   },
   {
@@ -315,44 +321,48 @@
    "outputs": [],
    "source": [
     "def divide_df(df, avgs, stds):\n",
-    "    \n",
+    "\n",
     "    flow = df.columns[-1]\n",
     "    for i, row in df.iterrows():\n",
     "        if stds[i % 12] != 0:\n",
-    "            df.loc[i, flow] = (df.loc[i, flow] - avgs[i%12]) / stds[i%12]\n",
+    "            df.loc[i, flow] = (df.loc[i, flow] - avgs[i % 12]) / stds[i % 12]\n",
     "        else:\n",
     "            df.loc[i, flow] = 0\n",
-    "        \n",
+    "\n",
     "    return df\n",
     "\n",
+    "\n",
     "def lognormalize_streamflows(streamflow_df):\n",
-    "    \n",
+    "\n",
     "    flow_name = streamflow_df.columns[-1]\n",
     "    copy_df = streamflow_df.copy()\n",
-    "    \n",
+    "\n",
     "    # take logarithm\n",
     "    problem_indices = copy_df[flow_name] < 1\n",
     "\n",
-    "    copy_df.loc[problem_indices,flow_name] = 1\n",
+    "    copy_df.loc[problem_indices, flow_name] = 1\n",
     "\n",
-    "    still_problem =copy_df.loc[copy_df[flow_name] < 1]\n",
-    "#     print(still_problem.to_markdown())\n",
+    "    still_problem = copy_df.loc[copy_df[flow_name] < 1]\n",
+    "    #     print(still_problem.to_markdown())\n",
     "    copy_df[flow_name] = pd.Series(np.log(copy_df[flow_name]))\n",
     "    monthly_averages = []\n",
     "    monthly_std = []\n",
-    "    \n",
-    "    for i in range(0,12):\n",
+    "\n",
+    "    for i in range(0, 12):\n",
     "        month_obs = copy_df.loc[copy_df.index % 12 == i, flow_name]\n",
     "        monthly_averages.append(np.mean(month_obs))\n",
     "        monthly_std.append(np.std(month_obs))\n",
-    "    \n",
+    "\n",
     "    return divide_df(copy_df, monthly_averages, monthly_std)\n",
     "\n",
+    "\n",
     "def findDroughts(streamflow_df, plotting=False):\n",
-    "    \n",
+    "\n",
     "    flow_name = streamflow_df.columns[-1]\n",
     "    dates = pd.Series(streamflow_df.index)\n",
-    "    normalized_log_streamflow = np.array(lognormalize_streamflows(streamflow_df)[flow_name])\n",
+    "    normalized_log_streamflow = np.array(\n",
+    "        lognormalize_streamflows(streamflow_df)[flow_name]\n",
+    "    )\n",
     "    total_observations = len(normalized_log_streamflow)\n",
     "    # first calculate the moving averages of 6 observations:\n",
     "\n",
@@ -366,48 +376,53 @@
     "    drought_period_indices = []\n",
     "\n",
     "    for i in range(6, total_observations):\n",
-    "        section_of_six = moving_averages_list[i-6:i]\n",
-    "        if all(map(lambda x: x<0, section_of_six)) and any(map(lambda x: x<-1, section_of_six)):\n",
+    "        section_of_six = moving_averages_list[i - 6 : i]\n",
+    "        if all(map(lambda x: x < 0, section_of_six)) and any(\n",
+    "            map(lambda x: x < -1, section_of_six)\n",
+    "        ):\n",
     "            drought_period_indices.append(i)\n",
-    "            \n",
+    "\n",
     "    if plotting:\n",
-    "        plt.plot(dates, moving_averages_list, color='black')\n",
-    "        plt.vlines(x = [dates[x] for x in drought_period_indices], ymin=-2,\n",
-    "                 ymax = 2, colors = 'red')\n",
-    "        plt.xlabel('Date',fontsize=14)\n",
-    "        plt.ylabel('SSI$_6$', fontsize=14)\n",
+    "        plt.plot(dates, moving_averages_list, color=\"black\")\n",
+    "        plt.vlines(\n",
+    "            x=[dates[x] for x in drought_period_indices], ymin=-2, ymax=2, colors=\"red\"\n",
+    "        )\n",
+    "        plt.xlabel(\"Date\", fontsize=14)\n",
+    "        plt.ylabel(\"SSI$_6$\", fontsize=14)\n",
     "        plt.title(f\"Drought investigation SSI6 criterion {flow_name}\", fontsize=14)\n",
-    "        #plt.xticks(rotation='vertical', fontsize=18)\n",
+    "        # plt.xticks(rotation='vertical', fontsize=18)\n",
     "        plt.yticks(fontsize=14)\n",
     "        plt.show()\n",
-    "    \n",
+    "\n",
     "    drought_groups = list()\n",
     "    already_grouped = list()\n",
-    "    \n",
+    "\n",
     "    for i, dr_index in enumerate(drought_period_indices):\n",
     "        if dr_index in already_grouped:\n",
     "            continue\n",
     "        current_group = [dr_index]\n",
     "        j = i\n",
-    "        \n",
-    "        if not j == len(drought_period_indices)-1:\n",
-    "            while (drought_period_indices[j+1] - drought_period_indices[j] == 1):\n",
-    "                current_group.append(drought_period_indices[j+1])\n",
-    "                already_grouped.append(drought_period_indices[j+1])\n",
+    "\n",
+    "        if not j == len(drought_period_indices) - 1:\n",
+    "            while drought_period_indices[j + 1] - drought_period_indices[j] == 1:\n",
+    "                current_group.append(drought_period_indices[j + 1])\n",
+    "                already_grouped.append(drought_period_indices[j + 1])\n",
     "                j += 1\n",
     "                if j == len(drought_period_indices) - 1:\n",
     "                    break\n",
-    "            \n",
+    "\n",
     "        drought_groups.append(current_group)\n",
-    "        \n",
+    "\n",
     "    drought_count = len(drought_groups)\n",
-    "    drought_magnitudes = list(map(lambda x: sum([moving_averages_list[i] for i in x]), drought_groups))\n",
+    "    drought_magnitudes = list(\n",
+    "        map(lambda x: sum([moving_averages_list[i] for i in x]), drought_groups)\n",
+    "    )\n",
     "    avg_magnitude = np.nan_to_num(np.mean(drought_magnitudes))\n",
     "    drought_lengths = list(map(lambda x: len(x), drought_groups))\n",
     "    avg_duration = np.nan_to_num(np.mean(drought_lengths))\n",
-    "    \n",
-    "#     print(drought_groups)\n",
-    "            \n",
+    "\n",
+    "    #     print(drought_groups)\n",
+    "\n",
     "    return drought_count, avg_magnitude, avg_duration"
    ]
   },
@@ -419,8 +434,9 @@
    "outputs": [],
    "source": [
     "from datetime import datetime, timedelta\n",
+    "\n",
     "base = datetime(2023, 1, 1)\n",
-    "date_list = [base + timedelta(days=30.5*x) for x in range(240)]"
+    "date_list = [base + timedelta(days=30.5 * x) for x in range(240)]"
    ]
   },
   {
@@ -651,13 +667,13 @@
     "\n",
     "    for catchment in columns:\n",
     "        print(catchment)\n",
-    "        sub_data = full_df.loc[:,[\"Date\", catchment]]\n",
+    "        sub_data = full_df.loc[:, [\"Date\", catchment]]\n",
     "        drought_count, avg_magnitude, avg_duration = findDroughts(sub_data)\n",
-    "        #print(drought_count, avg_magnitude, avg_duration)\n",
+    "        # print(drought_count, avg_magnitude, avg_duration)\n",
     "        drought_occurence.append(drought_count)\n",
     "        magnitudes.append(avg_magnitude)\n",
     "        durations.append(avg_duration)\n",
-    "        \n",
+    "\n",
     "    drought_counts.append(sum(drought_occurence))\n",
     "    average_durations.append(np.average(durations, weights=drought_occurence))\n",
     "    average_magnitudes.append(np.average(magnitudes, weights=drought_occurence))\n",
@@ -684,7 +700,7 @@
     }
    ],
    "source": [
-    "fig, (ax1, ax2, ax3) = plt.subplots(3, 1, figsize=(5,9))\n",
+    "fig, (ax1, ax2, ax3) = plt.subplots(3, 1, figsize=(5, 9))\n",
     "fig.suptitle(\"Drought characteristics of the 30 hydrology replications\", y=1.03)\n",
     "fig.tight_layout()\n",
     "fig.subplots_adjust(hspace=0.3)\n",
