--- a/nile_EMODPS_framework/experimentation/Profiling.ipynb
+++ b/nile_EMODPS_framework/experimentation/Profiling.ipynb
@@ -298,6 +298,7 @@
    ],
    "source": [
     "import cProfile\n",
+    "\n",
     "cProfile.run(\"model.evaluate(test_parameters)\")"
    ]
   },
@@ -321,9 +322,9 @@
     "from bisect import bisect_right\n",
     "from array import array\n",
     "\n",
-    "my_array = array(\"f\", [1,2,3,4,5])\n",
+    "my_array = array(\"f\", [1, 2, 3, 4, 5])\n",
     "\n",
-    "bisect_right(np.array([1,2,3,4,5]), 0.5)"
+    "bisect_right(np.array([1, 2, 3, 4, 5]), 0.5)"
    ]
   },
   {
