Clean-up unused code

--- a/nile_EMODPS_framework/experimentation/Multi-year drought excercise.ipynb
+++ b/nile_EMODPS_framework/experimentation/Multi-year drought excercise.ipynb
@@ -223,7 +223,7 @@
     "    copy_df[flow_name] = pd.Series(np.log(copy_df[flow_name]))\n",
     "    monthly_averages = []\n",
     "    monthly_std = []\n",
-    "    \n",
+    "\n",
     "    copy_df = copy_df.reset_index()\n",
     "\n",
     "    for i in range(0, 12):\n",
@@ -264,7 +264,7 @@
     "            map(lambda x: x > 11, section_of_six)\n",
     "        ):\n",
     "            flood_period_indices.append(i)\n",
-    "            \n",
+    "\n",
     "    print(drought_period_indices)\n",
     "    print(flood_period_indices)\n",
     "\n",
@@ -280,7 +280,7 @@
     "        )\n",
     "        plt.xlabel(\"Time\", fontsize=14)\n",
     "        plt.ylabel(\"SSI$_6$\", fontsize=14)\n",
-    "        #plt.title(f\"Drought investigation SSI6 criterion {flow_name}\", fontsize=14)\n",
+    "        # plt.title(f\"Drought investigation SSI6 criterion {flow_name}\", fontsize=14)\n",
     "        # plt.xticks(rotation='vertical', fontsize=18)\n",
     "        plt.yticks(fontsize=14)\n",
     "        plt.savefig(\"../plots/severe_drought_bluenile_ssi.pdf\", bbox_inches=\"tight\")\n",
@@ -304,9 +304,11 @@
     "                    break\n",
     "\n",
     "        drought_groups.append(current_group)\n",
-    "        \n",
+    "\n",
     "    # Let's focus on years 5-15 -> index 60 to 180:\n",
-    "    specific_droughts = [drought for drought in drought_groups if drought[0] in range(60, 180)]\n",
+    "    specific_droughts = [\n",
+    "        drought for drought in drought_groups if drought[0] in range(60, 180)\n",
+    "    ]\n",
     "    specific_droughts_magnitude = list(\n",
     "        map(lambda x: sum([moving_averages_list[i] for i in x]), specific_droughts)\n",
     "    )\n",
@@ -322,7 +324,13 @@
     "\n",
     "    #     print(drought_groups)\n",
     "\n",
-    "    return drought_count, avg_magnitude, avg_duration, drought_groups, sum_specific_droughts"
+    "    return (\n",
+    "        drought_count,\n",
+    "        avg_magnitude,\n",
+    "        avg_duration,\n",
+    "        drought_groups,\n",
+    "        sum_specific_droughts,\n",
+    "    )"
    ]
   },
   {
@@ -355,12 +363,12 @@
    "source": [
     "magnitudes = []\n",
     "for i in tqdm(range(1000)):\n",
-    "    \n",
+    "\n",
     "    sample = pd.read_csv(f\"../synthetic_hydrology/drought_identification/{i}.csv\")\n",
     "    sample[\"date\"] = date_list\n",
     "    small_df = sample.loc[:, [\"BlueNile\", \"date\"]].copy()\n",
     "    small_df = small_df.set_index(\"date\")\n",
-    "    magnitudes.append(findDroughts(small_df)[-1])\n"
+    "    magnitudes.append(findDroughts(small_df)[-1])"
    ]
   },
   {
@@ -479,20 +487,22 @@
    "outputs": [],
    "source": [
     "import importlib\n",
+    "\n",
     "# import plotter\n",
     "\n",
     "import sys\n",
+    "\n",
     "module_path = os.path.abspath(os.path.join(\"..\"))\n",
     "if module_path not in sys.path:\n",
     "    sys.path.append(module_path)\n",
-    "    \n",
+    "\n",
     "# importlib.reload(model.model_nile.ModelNile)\n",
     "\n",
     "from model.model_nile import ModelNile\n",
     "from output_analysis import plotter\n",
     "\n",
     "new_model = ModelNile()\n",
-    "#full_return = new_model.evaluate(solutions[i])"
+    "# full_return = new_model.evaluate(solutions[i])"
    ]
   },
   {
@@ -847,13 +857,20 @@
    "source": [
     "for policy in [best_egypt, percent_compromise, best_ethiopia]:\n",
     "    new_model.evaluate(policy)\n",
-    "    \n",
-    "    for dam, dam_color, mini, maxi in [(\"GERD\", \"#41ab5d\", 590, 640), (\"HAD\", \"#0195fb\", 147, 185)]:\n",
-    "        fig, ax = plt.subplots(figsize=(16,8))\n",
+    "\n",
+    "    for dam, dam_color, mini, maxi in [\n",
+    "        (\"GERD\", \"#41ab5d\", 590, 640),\n",
+    "        (\"HAD\", \"#0195fb\", 147, 185),\n",
+    "    ]:\n",
+    "        fig, ax = plt.subplots(figsize=(16, 8))\n",
     "        for key, value in enumerate([new_model]):\n",
     "            # print(key)\n",
     "            if key == 0:\n",
-    "                ax.plot(value.object_by_name(dam).level_vector, color=dam_color, label=f\"{dam} Level\")\n",
+    "                ax.plot(\n",
+    "                    value.object_by_name(dam).level_vector,\n",
+    "                    color=dam_color,\n",
+    "                    label=f\"{dam} Level\",\n",
+    "                )\n",
     "            else:\n",
     "                ax.plot(value.object_by_name(dam).level_vector, color=dam_color)\n",
     "\n",
@@ -861,25 +878,18 @@
     "        ax.set_ylabel(\"Level (masl)\")\n",
     "        for i, label, color in [(mini, \"Minimum Operating Level\", \"silver\")]:\n",
     "            ax.hlines(\n",
-    "                                y=i,\n",
-    "                                linewidth=3,\n",
-    "                                xmin=0,\n",
-    "                                xmax=240,\n",
-    "                                label=label,\n",
-    "                                color=color,\n",
-    "                                linestyle=\":\",\n",
-    "                            )\n",
-    "\n",
-    "        ax.set_xticks(\n",
-    "            np.arange(\n",
-    "                0, 20 * 12 + 1, 4 * 12\n",
+    "                y=i,\n",
+    "                linewidth=3,\n",
+    "                xmin=0,\n",
+    "                xmax=240,\n",
+    "                label=label,\n",
+    "                color=color,\n",
+    "                linestyle=\":\",\n",
     "            )\n",
-    "        )\n",
+    "\n",
+    "        ax.set_xticks(np.arange(0, 20 * 12 + 1, 4 * 12))\n",
     "        ax.set_xticklabels(\n",
-    "            [\n",
-    "                f\"Jan-{2023+i*4}\"\n",
-    "                for i in range(int(20 / 4) + 1)\n",
-    "            ],\n",
+    "            [f\"Jan-{2023+i*4}\" for i in range(int(20 / 4) + 1)],\n",
     "            fontsize=14,\n",
     "        )\n",
     "\n",
