--- a/nile_EMODPS_framework/output_analysis/output_analysis.ipynb
+++ b/nile_EMODPS_framework/output_analysis/output_analysis.ipynb
@@ -969,13 +969,16 @@
    ],
    "source": [
     "# create 3x1 subplots\n",
-    "fig, axs = plt.subplots(nrows=3, ncols=1, figsize=(24,24), constrained_layout=True)\n",
-    "fig.suptitle('a) GERD Level                                                                                        b) HAD Level', fontsize=36)\n",
+    "fig, axs = plt.subplots(nrows=3, ncols=1, figsize=(24, 24), constrained_layout=True)\n",
+    "fig.suptitle(\n",
+    "    \"a) GERD Level                                                                                        b) HAD Level\",\n",
+    "    fontsize=36,\n",
+    ")\n",
     "\n",
     "# clear subplots\n",
     "for ax in axs:\n",
     "    ax.remove()\n",
-    "    \n",
+    "\n",
     "# add subfigure per subplot\n",
     "gridspec = axs[0].get_subplotspec().get_gridspec()\n",
     "subfigs = [fig.add_subfigure(gs) for gs in gridspec]\n",
@@ -987,19 +990,19 @@
     "]\n",
     "\n",
     "dam_plot_parameters = [\n",
-    "        (\"GERD\", \"#41ab5d\", 590, 640),\n",
-    "        (\"HAD\", \"#0195fb\", 147, 185),\n",
-    "    ]\n",
+    "    (\"GERD\", \"#41ab5d\", 590, 640),\n",
+    "    (\"HAD\", \"#0195fb\", 147, 185),\n",
+    "]\n",
     "\n",
     "for row, subfig in enumerate(subfigs):\n",
-    "    subfig.suptitle(f'{policies[row]} Policy', fontsize=32)\n",
-    "    \n",
+    "    subfig.suptitle(f\"{policies[row]} Policy\", fontsize=32)\n",
+    "\n",
     "    # create 1x2 subplots per subfig\n",
     "    axs = subfig.subplots(nrows=1, ncols=2)\n",
-    "    \n",
+    "\n",
     "    for column, ax in enumerate(axs):\n",
     "        dam, dam_color, mini, maxi = dam_plot_parameters[column]\n",
-    "        \n",
+    "\n",
     "        for key, value in running_models[policies[row]][0].items():\n",
     "            # print(key)\n",
     "            if key == 0:\n",
@@ -1032,13 +1035,10 @@
     "        ax.tick_params(labelsize=18)\n",
     "\n",
     "        ax.legend(fontsize=18)\n",
-    "        #ax.set_title(titles[row][column], fontsize= 20, fontweight='bold')\n",
+    "        # ax.set_title(titles[row][column], fontsize= 20, fontweight='bold')\n",
     "\n",
-    "plt.savefig(\n",
-    "    f\"../plots/baseline_optimization/overall_dams.pdf\", bbox_inches=\"tight\"\n",
-    ")\n",
-    "plt.show()\n",
-    "\n"
+    "plt.savefig(f\"../plots/baseline_optimization/overall_dams.pdf\", bbox_inches=\"tight\")\n",
+    "plt.show()"
    ]
   },
   {
